core/kustomize/base/ingress.yaml
---
# Ingress for routes requiring MTLS with Open Banking Directory issued certs
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: NAMESPACE_PLACEHOLDER/obri-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    nginx.ingress.kubernetes.io/error-log-level: "debug"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 128k"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
  name: mtls
spec:
  ingressClassName: nginx
  rules:
    - host: MTLS_FQDN_PLACEHOLDER
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /am/oauth2/realms/root/realms/alpha/access_token
            pathType: Exact
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /am/oauth2/realms/root/realms/alpha/register
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /am/oauth2/realms/root/realms/alpha/par
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /rs/
            pathType: Prefix
  tls:
    - hosts:
        - MTLS_FQDN_PLACEHOLDER
      secretName: mtls-sslcert
---
# Ingress for access to routes protected with TLS by a ForgeRock cert
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/error-log-level: "debug"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 128k"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
  name: sapig
spec:
  ingressClassName: nginx
  rules:
    - host: FQDN_PLACEHOLDER
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /am/
            pathType: Prefix
  tls:
    - hosts:
        - FQDN_PLACEHOLDER
      secretName: sapig-sslcert
